--- a/frontend/django_ffmpeg/package.json
+++ b/frontend/django_ffmpeg/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "next": "14.2.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "hls.js": "^1.5.8",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "video.js": "^8.10.0",
     "videojs-contrib-hls": "^5.15.0"
   }
