--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/next-plugin": "^2.4.0",
+    "@vanilla-extract/recipes": "^0.5.2",
     "axios": "^1.6.8",
     "next": "14.2.1",
     "react": "^18",
