--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/next-plugin": "^2.4.0",
     "@vanilla-extract/recipes": "^0.5.2",
@@ -16,6 +20,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
