--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -17,7 +17,7 @@
     "@vanilla-extract/next-plugin": "^2.4.0",
     "@vanilla-extract/recipes": "^0.5.2",
     "axios": "^1.6.8",
-    "next": "14.2.1",
+    "next": "^14.3.0-canary.21",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
