--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@vanilla-extract/css": "^1.14.2",
+    "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/next-plugin": "^2.4.0",
     "@vanilla-extract/recipes": "^0.5.2",
     "axios": "^1.6.8",
+    "emoji-picker-react": "^4.9.2",
     "hls.js": "^1.5.8",
     "next": "^14.2.3",
     "react": "^18",
