--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -13,17 +13,24 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@stomp/stompjs": "^7.0.0",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/next-plugin": "^2.4.0",
     "@vanilla-extract/recipes": "^0.5.2",
     "axios": "^1.6.8",
     "emoji-picker-react": "^4.9.2",
+    "express": "^4.19.2",
     "hls.js": "^1.5.8",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "sockjs-client": "^1.6.1",
+    "stomp-broker-js": "^1.3.0",
+    "stompjs": "^2.3.3",
+    "websocket": "^1.0.34",
+    "ws": "^8.16.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
