--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.1.0",
     "sockjs-client": "^1.6.1",
     "stomp-broker-js": "^1.3.0",
+    "stompjs": "^2.3.3",
     "websocket": "^1.0.34",
     "zustand": "^4.5.2"
   },
