--- a/BACKEND/SPRING/build.gradle
+++ b/BACKEND/SPRING/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework:spring-websocket'
 
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
@@ -41,6 +42,16 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+
+
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+
+
+	// https://mvnrepository.com/artifact/org.kurento/kurento-client
+	implementation group: 'org.kurento', name: 'kurento-client', version: '7.0.0'
+	// https://mvnrepository.com/artifact/org.kurento/kurento-utils-js
+	implementation group: 'org.kurento', name: 'kurento-utils-js', version: '7.0.0'
 
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
