--- a/BACKEND/SPRING/build.gradle
+++ b/BACKEND/SPRING/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 	implementation 'com.auth0:java-jwt:4.2.2'
 	implementation 'com.google.code.gson:gson:2.8.8'
