--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -25,10 +25,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-player": "^2.16.0",
     "sockjs-client": "^1.6.1",
     "stomp-broker-js": "^1.3.0",
     "stompjs": "^2.3.3",
-    "video.js": "^8.12.0",
     "websocket": "^1.0.34",
     "zustand": "^4.5.2"
   },
