--- a/FRONTEND/ving/.gitignore
+++ b/FRONTEND/ving/.gitignore
@@ -34,3 +34,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# next-video
+no/*
+!no/*.json
+!no/*.js
+!no/*.ts
+public/_next-video
