--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -22,6 +22,7 @@
     "emoji-picker-react": "^4.9.2",
     "hls.js": "^1.5.8",
     "next": "^14.2.3",
+    "next-video": "^1.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
