--- a/BACKEND/DJANGO/requirements.txt
+++ b/BACKEND/DJANGO/requirements.txt
@@ -1,4 +1,29 @@
+amqp==5.2.0
 asgiref==3.8.1
-Django==5.0.4
+backports-datetime-fromisoformat==2.0.1
+billiard==4.2.0
+celery==5.4.0
+channels==4.1.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+Django==4.2.11
+django-cors-headers==4.3.1
+django-rest-framework==0.1.0
+djangorestframework==3.15.1
+ffmpeg-python==0.2.0
+future==1.0.0
+kombu==5.3.7
+m3u8==4.1.0
+mysqlclient==2.2.4
+prompt-toolkit==3.0.43
+python-dateutil==2.9.0.post0
+python-ffmpeg-video-streaming==0.1.16
+six==1.16.0
 sqlparse==0.5.0
+typing_extensions==4.11.0
 tzdata==2024.1
+vine==5.1.0
+wcwidth==0.2.13
