--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,react,nextjs,visualstudiocode,python,django,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react,nextjs,visualstudiocode,python,django,intellij
+STATIC/
+
 
 ### Django ###
 *.log
