--- a/BACKEND/DJANGO/requirements.txt
+++ b/BACKEND/DJANGO/requirements.txt
@@ -1,4 +1,21 @@
 asgiref==3.8.1
+boto3==1.34.96
+botocore==1.34.96
+channels==4.1.0
 Django==5.0.4
+django-cors-headers==4.3.1
+djangorestframework==3.15.1
+ffmpeg-python==0.2.0
+future==1.0.0
+jmespath==1.0.1
+m3u8==4.1.0
+mysqlclient==2.2.4
+numpy==1.26.4
+opencv-python==4.9.0.80
+python-dateutil==2.9.0.post0
+python-ffmpeg-video-streaming==0.1.16
+s3transfer==0.10.1
+six==1.16.0
 sqlparse==0.5.0
 tzdata==2024.1
+urllib3==2.2.1
