--- a/FRONTEND/ving/package.json
+++ b/FRONTEND/ving/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/css-utils": "^0.1.3",
+    "@vanilla-extract/dynamic": "^2.1.0",
     "@vanilla-extract/next-plugin": "^2.4.0",
     "@vanilla-extract/recipes": "^0.5.2",
     "axios": "^1.6.8",
