--- a/BACKEND/DJANGO/requirements.txt
+++ b/BACKEND/DJANGO/requirements.txt
@@ -1,9 +1,10 @@
 amqp==5.2.0
+APScheduler==3.10.4
 asgiref==3.8.1
 backports-datetime-fromisoformat==2.0.1
 billiard==4.2.0
-boto3==1.34.99
-botocore==1.34.99
+boto3==1.34.100
+botocore==1.34.100
 celery==5.4.0
 channels==4.1.0
 click==8.1.7
@@ -13,25 +14,32 @@ click-repl==0.3.0
 colorama==0.4.6
 dj-database-url==2.1.0
 Django==4.2.11
+django-apscheduler==0.6.2
 django-cors-headers==4.3.1
 django-rest-framework==0.1.0
 django-storages==1.14.3
 djangorestframework==3.15.1
+dnspython==2.6.1
 ffmpeg-python==0.2.0
 future==1.0.0
 jmespath==1.0.1
 kombu==5.3.7
 m3u8==4.1.0
+mongoengine==0.28.2
 mysqlclient==2.2.4
 prompt-toolkit==3.0.43
+pymongo==4.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-ffmpeg-video-streaming==0.1.16
+pytz==2024.1
 s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.11.0
 tzdata==2024.1
+tzlocal==5.2
 urllib3==1.26.18
 vine==5.1.0
+watchdog==4.0.0
 wcwidth==0.2.13
