--- a/BACKEND/DJANGO/requirements.txt
+++ b/BACKEND/DJANGO/requirements.txt
@@ -1,6 +1,5 @@
 amqp==5.2.0
 APScheduler==3.10.4
-amqp==5.2.0
 asgiref==3.8.1
 backports-datetime-fromisoformat==2.0.1
 billiard==4.2.0
@@ -17,6 +16,7 @@ dj-database-url==2.1.0
 Django==4.2.11
 django-apscheduler==0.6.2
 django-cors-headers==4.3.1
+django-environ==0.11.2
 django-rest-framework==0.1.0
 django-storages==1.14.3
 djangorestframework==3.15.1
@@ -37,7 +37,6 @@ pytz==2024.1
 s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.5.0
-typing_extensions==4.11.0
 typing_extensions==4.11.0
 tzdata==2024.1
 tzlocal==5.2
