--- a/BACKEND/SPRING/.gitignore
+++ b/BACKEND/SPRING/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+src/main/java/resources
+!src/main/java/resources/application.yaml
 ### STS ###
 .apt_generated
 .classpath
