--- a/BACKEND/SPRING/.gitignore
+++ b/BACKEND/SPRING/.gitignore
@@ -5,8 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-src/main/java/resources
-!src/main/java/resources/application.yaml
+.yaml
+# !**/src/main/java/resources/application.yml
 ### STS ###
 .apt_generated
 .classpath
