--- a/BACKEND/SPRING/build.gradle
+++ b/BACKEND/SPRING/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'ving.spring'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.3-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
@@ -23,7 +23,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework:spring-websocket'
-
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
@@ -45,10 +45,9 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
